게시글 MVC구조 변경

--- a/app/src/main/res/layout/activity_board_write.xml
+++ b/app/src/main/res/layout/activity_board_write.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".pages.board.BoardWriteActivity">
+        tools:context=".pages.board.write.BoardWriteView">
 
         <ScrollView
             android:layout_width="match_parent"
