--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,20 +45,29 @@
         android:id="@+id/fragmentContainerView"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:defaultNavHost="true"
-        app:navGraph="@navigation/main_nav"
-        android:layout_marginTop="60dp"
-        />
+        android:layout_height="0dp"
+    app:defaultNavHost="true"
+    app:navGraph="@navigation/main_nav"
+    android:layout_marginTop="60dp"
+    app:layout_constraintTop_toBottomOf="@+id/topBar"
+    app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
+    />
 
-<!--        <Button-->
-<!--        android:id="@+id/logoutBtn"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="LOGOUT"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent" />-->
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bottom_nav_background"
+        app:elevation="8dp"
+        app:itemRippleColor="@color/blue"
+        app:itemIconTint="@color/tab_colors"
+        app:itemTextColor="@color/tab_colors"
+        app:labelVisibilityMode="labeled"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:menu="@menu/bottom_nav_menu"
+        tools:layout_editor_absoluteX="0dp" />
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
