--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,11 +33,11 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        app:layout_constraintTop_toBottomOf="@+id/topBar"
         android:background="#999999"
-        >
+        app:layout_constraintTop_toBottomOf="@+id/topBar">
 
     </LinearLayout>
 
@@ -46,12 +46,10 @@
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-    app:defaultNavHost="true"
-    app:navGraph="@navigation/main_nav"
-    android:layout_marginTop="60dp"
-    app:layout_constraintTop_toBottomOf="@+id/topBar"
-    app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
-    />
+        app:defaultNavHost="true"
+        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
+        app:layout_constraintTop_toBottomOf="@+id/topBar"
+        app:navGraph="@navigation/main_nav" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
