--- a/app/src/main/res/layout/fragment_board.xml
+++ b/app/src/main/res/layout/fragment_board.xml
@@ -12,7 +12,7 @@
                 android:id="@+id/boardListView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginBottom="70dp"/>
+                app:layout_constraintBottom_toBottomOf="parent" />
 
 
             <ImageView
@@ -22,7 +22,7 @@
                 android:src="@drawable/writebtn"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginBottom="70dp"
+                android:layout_marginBottom="30dp"
                 android:layout_marginRight="10dp"/>
 
 <!--            <LinearLayout-->
