Ai Fragment 구조 변경

--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -53,7 +53,7 @@
     </fragment>
     <fragment
         android:id="@+id/chatFragment"
-        android:name="com.example.pathfinder.fragments.AiFragment"
+        android:name="com.example.pathfinder.fragments.AiFragment.AiFragment"
         android:label="fragment_chat"
         tools:layout="@layout/fragment_ai_chat" />
 </navigation>
