--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,12 +4,19 @@
         android:icon="@drawable/baseline_home_24"
         android:title="홈"/>
     <item
-        android:id="@+id/talkFragment"
+        android:id="@+id/boardFragment"
         android:icon="@drawable/baseline_article_24"
         android:title="게시판"/>
     <item
-        android:id="@+id/storeFragment"
+        android:id="@+id/teamBuildingFragment"
+        android:icon="@drawable/baseline_account_box_24"
+        android:title="프로젝트"/>
+
+    <item
+        android:id="@+id/userProfileFragment"
         android:icon="@drawable/baseline_account_box_24"
         android:title="프로필"/>
+
+
 
 </menu>
