--- a/app/src/main/res/drawable/rounded_gray_background.xml
+++ b/app/src/main/res/drawable/rounded_gray_background.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-  
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="#DDDDDD" />
+    <corners android:radius="8dp" />
+    <padding android:left="8dp" android:top="4dp" android:right="8dp" android:bottom="4dp" />
+</shape>
