--- a/app/src/main/res/layout/activity_board_write.xml
+++ b/app/src/main/res/layout/activity_board_write.xml
@@ -9,59 +9,61 @@
         android:orientation="vertical"
         tools:context=".pages.board.write.BoardWriteView">
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:gravity="center"
+            android:text="글쓰기 페이지"
+            android:textStyle="bold"
+            android:textColor="@color/black" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="@color/black" />
+
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:padding="16dp"
+            >
 
-            <androidx.appcompat.widget.LinearLayoutCompat
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <LinearLayout
+                <TextView
                     android:layout_width="match_parent"
-                    android:layout_height="60dp">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:gravity="center"
-                        android:text="글쓰기 페이지"
-                        android:textStyle="bold"
-                        android:textColor="@color/black" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="0.5dp"
-                    android:background="@color/black" />
+                    android:layout_height="wrap_content"
+                    android:text="제목"
+                    android:textColor="@color/black"
+                    android:layout_marginTop="8dp" />
 
                 <EditText
                     android:id="@+id/titleArea"
                     android:layout_width="match_parent"
-                    android:layout_height="60dp"
-                    android:layout_margin="20dp"
-                    android:background="@color/transparent"
-                    android:hint="제목을 입력해주세요" />
+                    android:layout_height="50dp"
+                    android:layout_marginTop="4dp"
+                    android:background="@drawable/rounded_border"
+                    android:hint="제목을 입력해주세요"
+                    android:paddingLeft="8dp" />
 
-
-                <LinearLayout
+                <TextView
                     android:layout_width="match_parent"
-                    android:layout_height="0.5dp"
-                    android:background="@color/black" />
+                    android:layout_height="wrap_content"
+                    android:text="내용"
+                    android:textColor="@color/black"
+                    android:layout_marginTop="8dp" />
 
                 <EditText
                     android:id="@+id/contentArea"
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
-                    android:layout_margin="20dp"
-                    android:background="@color/transparent"
-                    android:hint="내용을 입력해주세요" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="0.5dp"
-                    android:background="@color/black" />
+                    android:layout_marginTop="4dp"
+                    android:background="@drawable/rounded_border"
+                    android:hint="내용을 입력해주세요"
+                    android:paddingLeft="8dp" />
 
                 <ImageView
                     android:layout_gravity="center"
@@ -75,13 +77,12 @@
                     android:id="@+id/writeBtn"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
-                    android:layout_marginLeft="20dp"
                     android:layout_marginTop="30dp"
-                    android:layout_marginRight="20dp"
                     android:background="@drawable/background_radius_yellow"
                     android:text="입력"
                     android:textColor="@color/white" />
-            </androidx.appcompat.widget.LinearLayoutCompat>
+
+            </LinearLayout>
 
         </ScrollView>
 
