--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".pages.setting.SettingActivity">
+    tools:context=".ui.setting.SettingActivity">
 
     <Button
         android:id="@+id/logoutBtn"
