--- a/app/src/main/res/layout/activity_team_building_write.xml
+++ b/app/src/main/res/layout/activity_team_building_write.xml
@@ -5,7 +5,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".pages.teamBuilding.TeamBuildingWriteActivity">
+        tools:context=".ui.teamBuilding.TeamBuildingWriteActivity">
 
 
         <TextView
