태그 선택시 화면에 보이게 구현

--- a/app/src/main/res/layout/activity_board_write.xml
+++ b/app/src/main/res/layout/activity_board_write.xml
@@ -32,6 +32,7 @@
             android:textSize="14sp" />
 
         <LinearLayout
+            android:id="@+id/tagsLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
