--- a/app/src/main/res/layout/fragment_board.xml
+++ b/app/src/main/res/layout/fragment_board.xml
@@ -16,6 +16,8 @@
             android:layout_marginStart="10dp"
             android:textOff="멘토"
             android:textOn="멘토"
+            android:textStyle="bold"
+            android:textSize="18dp"
             android:padding="8dp"
             android:background="@android:color/transparent"
             android:textColor="@color/tab_colors"
@@ -30,6 +32,8 @@
             android:layout_marginStart="10dp"
             android:textOff="멘티"
             android:textOn="멘티"
+            android:textStyle="bold"
+            android:textSize="18dp"
             android:padding="8dp"
             android:background="@android:color/transparent"
             android:textColor="@color/tab_colors"
