아이콘 리네임&게시판 디자인 변경

--- a/app/src/main/res/layout/activity_board_inside.xml
+++ b/app/src/main/res/layout/activity_board_inside.xml
@@ -117,7 +117,7 @@
 
             <ImageView
                 android:id="@+id/commentBtn"
-                android:src="@drawable/writebtn"
+                android:src="@drawable/ic_writebtn"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 app:layout_constraintEnd_toEndOf="parent"
