--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,20 +1,20 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/homeFragment"
-        android:icon="@drawable/home_icon"
+        android:icon="@drawable/ic_home"
         android:title="홈"/>
     <item
         android:id="@+id/boardFragment"
-        android:icon="@drawable/board_icon"
+        android:icon="@drawable/ic_board"
         android:title="게시판"/>
     <item
         android:id="@+id/teamBuildingFragment"
-        android:icon="@drawable/team_icon"
+        android:icon="@drawable/ic_team"
         android:title="프로젝트"/>
 
     <item
         android:id="@+id/userProfileFragment"
-        android:icon="@drawable/profile_icon"
+        android:icon="@drawable/ic_profile"
         android:title="프로필"/>
 
 
