세팅버튼투명화

--- a/app/src/main/res/layout/activity_board_inside.xml
+++ b/app/src/main/res/layout/activity_board_inside.xml
@@ -58,6 +58,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:tint="@color/white"
+                android:alpha="0.0"
                 />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
